# SushiGo-Tourney

./: .gitignore  README.md  pyproject.toml
sushigo/: deck.py  game.py  player.py
sushigo/cards/: __init__.py  appetizers.py  card.py  desserts.py  nigiri.py  rolls.py  specials.py
