[tool.poetry]
name = "sushigo-tourney"
version = "0.1.0"
description = "Simulates SushiGo games with different player strategies"
authors = ["Harrison-Brown <hlbrown95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
pylint = "^3.3.7"
autopep8 = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"